--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
+    "babel-eslint": "^10.1.0",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-currency-format": "^1.1.0",
