--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "firebase": "^9.10.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
